--- a/index.html
+++ b/index.html
@@ -1,74 +1,14 @@
 ---
+layout: site-grandeur
 ---
 
-<!DOCTYPE html>
-<html>
+{% assign devlog = site.tags.devlog | first %}
+{% assign devshort = site.tags.devshort | first %}
+{% assign artshort = site.tags.artshort | first %}
 
-<head>
-    <title>Julian Blane</title>
+{% assign posts = "" | split: ',' %}
+{% assign posts = posts | push: devlog %}
+{% assign posts = posts | push: devshort %}
+{% assign posts = posts | push: artshort %}
 
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Coda">
-    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/css/grandeur.css">
-    <!-- TODO: favicon -->
-    <!-- TODO: SEO -->
-</head>
-
-<body>
-    <wrapper>
-        <div class="stage">
-            <mesh class="cube">
-                <face class="cube-face bottom"></face>
-                <face class="cube-face front">
-                    <div class="absolute-bottom-left">
-                        <h1 class="h h1-no-margin button" data-href="#bio">JULIAN BLANE</h1>
-                    </div>
-                </face>
-                <face class="cube-face right">
-                    <div class="absolute-bottom-right text-align-right">
-                        <p class="h h2-no-margin button"
-                            data-href=#todo >TODO: titles</p>
-                    </div>
-                </face>
-            </mesh>
-
-            <div class="sky-edge">
-                <mesh class="right">
-                    <face class="side"></face>
-                    <face class="front"></face>
-                </mesh>
-
-                <mesh class="left">
-                    <face class="side"></face>
-                    <face class="front"></face>
-                </mesh>
-
-                <face></face>
-            </div>
-        </div>
-        <div class="content">
-            {% assign devlog = site.tags.devlog | first %}
-            {% assign devshort = site.tags.devshort | first %}
-            {% assign artshort = site.tags.artshort | first %}
-        
-            {% assign posts = "" | split: ',' %}
-            {% assign posts = posts | push: devlog %}
-            {% assign posts = posts | push: devshort %}
-            {% assign posts = posts | push: artshort %}
-            
-            {% include gallery.html posts=posts %}
-        </div>
-        <footer>
-            <div class="author">
-                2024 Julián Benegas Lane
-            </div>
-            <div class="links">
-                <!-- TODO: links -->
-            </div>
-        </footer>
-    </wrapper>
-</body>
-
-</html>
+{% include gallery.html posts=posts %}
