categorize by project

--- a/projects/profundidades.html
+++ b/projects/profundidades.html
@@ -2,4 +2,4 @@
 layout: site-grandeur
 ---
 
-{% include gallery.html posts=site.tags.profundidades %}
+{% include gallery.html posts=site.categories.profundidades %}
