post preview styling

--- a/index.html
+++ b/index.html
@@ -13,4 +13,4 @@ layout: site-grandeur
 {% assign posts = posts | push: artshort %}
 {% assign posts = posts | push: release %}
 
-{% include gallery.html posts=posts %}
+{% include gallery.html posts=posts show_project=true %}
