seo and meta improvements: image and title

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 layout: site-grandeur
 ---
 
+<head>
+    <title>{{ site.title }}</title>
+</head>
+
 {% assign devlog = site.tags.devlog | first %}
 {% assign devshort = site.tags.devshort | first %}
 {% assign artshort = site.tags.artshort | first %}
