--- a/404.html
+++ b/404.html
@@ -1,11 +1,16 @@
 ---
 permalink: /404.html
-layout: default
+layout: site-grandeur
+header: 404
 ---
 
-<div class="container">
-  <h1>404</h1>
+<style>
+  :root {
+    --sky-colour-hue: 0;
+  }
+</style>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+<div class="container">
+  <p>El resource no existing</p>
+  <a href="{{site.base_url}}/">Hace click aca.</a>
 </div>
