--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ image: /assets/projects/grandeur.jpeg
 {% assign posts = posts | push: site.categories.shorts[3] %}
 {% assign posts = posts | push: site.categories.shorts[4] %}
 {% assign posts = posts | push: site.categories.shorts[5] %}
-{% assign posts = posts | push: site.categories.novedades[1] %}
-{% assign posts = posts | push: site.categories.novedades[0] %}
+{% assign posts = posts | push: site.categories.news[0] %}
+{% assign posts = posts | push: site.categories.news[1] %}
 
 {% include gallery.html posts=posts show_project=true show_tags=false %}
